crude copy to target functionality

--- a/index.htm
+++ b/index.htm
@@ -281,7 +281,7 @@
 
 		$('.transcript-file').live('click',function(){ 
 			var id = $(this).attr('href'); 
-			var file ='transcripts/'+id; 
+			var file ='transcripts/'+id+'.htm'; 
 			var audioogg = 'audio/'+id+'.ogg';
 			var audiomp3 = 'audio/'+id+'.mp3';   
 			
