added pause between tracks to allow catch up

--- a/pad.htm
+++ b/pad.htm
@@ -209,7 +209,9 @@
 							myPlayer.jPlayer("setMedia", {
 				         		mp3: audiomp3, 
 								oga: audioogg  
-				       		});       
+				       		});   
+				
+				    		myPlayer.jPlayer("pause",3);
 			
 							myPlayer.jPlayer("play",start/1000);  
 						}    
