bug fix - loads transcripts as .htm files

--- a/pad.htm
+++ b/pad.htm
@@ -361,7 +361,7 @@
 		}); 
 		
 		function loadFile(id) { 
-			var file = transcriptDir+'/'+id; 
+			var file = transcriptDir+'/'+id+'.htm'; 
 			var audioogg = audioDir+'/'+id+'.ogg';
 			var audiomp3 = audioDir+'/'+id+'.mp3';  
 			
