bug fix - loads transcripts as .htm files (missed one)

--- a/pad.htm
+++ b/pad.htm
@@ -98,7 +98,7 @@
 				timespan.m = theScriptState[i].m; 
 				
 				//var id = theScriptState[i].m;
-                var file = transcriptDir+'/'+timespan.m; 
+                var file = transcriptDir+'/'+timespan.m+'.htm'; 
 				var audioogg = audioDir+'/'+timespan.m+'.ogg';
 				var audiomp3 = audioDir+'/'+timespan.m+'.mp3';
 				
