--- a/pad.htm
+++ b/pad.htm
@@ -591,13 +591,11 @@
               
 			<!-- transcript loader -->
 			
+
 			<ul>
-				<li><a class="transcript-file" href="did-annie-lennox" >Annie Lennox</a></li>
-				<li><a class="transcript-file" href="did-bill-bailey" >Bill Bailey</a></li>
-				<li><a class="transcript-file" href="did-diane-abbot" >Diane Abbot</a></li> 
-				<li><a class="transcript-file" href="did-janet-street-porter" >Janet Street-Porter</a></li>
-				<li><a class="transcript-file" href="did-yoko-ono" >Yoko Ono</a></li>  
-            </ul>
+				<li><a class="transcript-file" href="nitotmozilla-m" >Nitot on Firefox</a></li>
+				<li><a class="transcript-file" href="mbjkaudio" >HTML5 Audio</a></li>  
+            </ul> 
 			
          </div><!-- end #sidebar -->    
 
