--- a/index.htm
+++ b/index.htm
@@ -1,21 +1,18 @@
+<!--
+ * Hyperaudio Pad
+ * Mark Boas @maboa markb@happyworm.com
+ * GPL licensed http://www.gnu.org/copyleft/gpl.html
+-->
+
 <!DOCTYPE html>
 
-
-<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
-
+<html>
 <head>
-
-	<!-- Meta Tags -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	
-	<!-- Title -->
-	<title>Hyperaudio Maker</title>    
-                                                                                                  
+	<title>Hyperaudio Maker</title>                                                                                           
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-
 </head>
 
-<!-- BEGIN body -->
 <body class="single single-post postid-4004 gecko layout-2cr">  
 	<div id="header" class="clearfix">
 		<div id="title">
