--- a/pad.htm
+++ b/pad.htm
@@ -1,3 +1,9 @@
+<!--
+ * Hyperaudio Pad
+ * Mark Boas @maboa markb@happyworm.com
+ * GPL licensed http://www.gnu.org/copyleft/gpl.html
+-->
+
 <!DOCTYPE html>
 
 <!-- BEGIN html -->
