--- a/parserSRT.htm
+++ b/parserSRT.htm
@@ -1,33 +1,21 @@
+<!--
+ * Hyperaudio Pad
+ * Mark Boas @maboa markb@happyworm.com
+ * GPL licensed http://www.gnu.org/copyleft/gpl.html
+-->
+
 <!DOCTYPE html>
-
-<!-- BEGIN html -->
-<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
-<!-- Based on an Orman Clark design (http://www.premiumpixels.com) -->
-
-<!-- BEGIN head -->
+<html>
 <head>
-
-	<!-- Meta Tags -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	
-	<!-- Title -->
 	<title>SRT Parser</title>    
-	
 
-
-	
-	<!-- Stylesheets -->
-    <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic" type="text/css" />
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold" type="text/css" /> -->
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" media="all" href="scrollpane.css" />  
-	    
-	
-	<!-- Move jQuery Local! -->
+
      
 	<script type="text/javascript" src="js/jquery.min.js"></script>    
 	<script type="text/javascript" src="js/popcorn.js"></script> 
-	<!--<script type="text/javascript" src="js/popcorn.parserSRT.js"></script>--> 
 
 	
 	<script type="text/javascript">
