delayed file selection until ready

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 				Transcripts
 			</div>
 			<div class="body row scroll-y">
-				<ul class="listview">
-					<li><a class="transcript-file" href="internetindians" >Internet Indians</a></li>
-					<li><a class="transcript-file" href="raidsinrainforest" >Rainforest Raids</a></li>
+				<ul id="transcript-files" class="listview">
+					<!--<li><a class="transcript-file" href="internetindians" >Internet Indians</a></li>
+					<li><a class="transcript-file" href="raidsinrainforest" >Rainforest Raids</a></li>-->
+					<li>loading...</li>
 				</ul>
 			</div>
 			<div class="footer row">
