colour fade commands

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
 			<div id="media-content" class="media-hldr">
 				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+				<div id="jquery_jplayer_2" class="jp-jplayer"></div>
+				<div id="fader-content"></div>
 			</div>
 
 			<div id="transcript-content" class="body row scroll-y">
@@ -66,7 +68,7 @@
 
 		<div class="right col">
 			<div class="header row">
-				<span class="header-ctrl" style="display:none"><a href="#">play</a> | <a href="#">clear</a></span>
+				<!--<span class="header-ctrl"><a href="#">play</a> | <a href="#">clear</a></span>-->
 			</div>
 
 			<div id="target-content" class="body row scroll-y" contenteditable="true">
