updated libraries and fixed any compatibility issues

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 		<script type="text/javascript" src="js/jquery.jplayer.js"></script>      
 		<script type="text/javascript" src="js/popcorn.js"></script> 
 		<script type="text/javascript" src="js/popcorn.transcript.js"></script> 
+		<script type="text/javascript" src="js/popcorn.code.js"></script>
 		<script type="text/javascript" src="js/jquery.bbq.js"></script>   
 		<script type="text/javascript" src="js/iemobile-fix.js"></script>
 		<script type="text/javascript" src="js/hap.js"></script>
