added hide video otion

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<div id="transcript" class="middle col">
 			<div class="header row">
-				<span id="script-title"></span> <span id="load-status"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video" href="#">show video</a> . <a id="play-btn-source" href="#">play</a><a id="pause-btn-source" href="#" style="display:none">pause</a></span>
+				<span id="script-title"></span> <span id="load-status"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video" href="#">show video</a><a id="hide-video" href="#" style="display:none">hide video</a> . <a id="play-btn-source" href="#">play</a><a id="pause-btn-source" href="#" style="display:none">pause</a></span>
 
 			</div>
 
