Updated transcript plugin and text now scrollTo the para.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.jplayer.js"></script>      
+		<script type="text/javascript" src="js/jquery.scrollto.min.js"></script>
 		<script type="text/javascript" src="js/popcorn.js"></script> 
 		<script type="text/javascript" src="js/popcorn.transcript.js"></script> 
 		<script type="text/javascript" src="js/popcorn.code.js"></script>
