Implemented source and target x2 video system based on old 2x source system. Still needs polish for target part.

--- a/index.html
+++ b/index.html
@@ -41,16 +41,14 @@
 
 		<div id="transcript" class="middle col">
 			<div class="header row">
-				<span id="script-title"></span> <span id="load-status"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video" href="#">show video</a><a id="hide-video" href="#" style="display:none">hide video</a> . <a id="play-btn-source" href="#">play</a><a id="pause-btn-source" href="#" style="display:none">pause</a></span>
+				<span id="script-title"></span> <span id="load-status-source"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-source" href="#">show video</a><a id="hide-video-source" href="#" style="display:none">hide video</a> . <a id="play-btn-source" href="#">play</a><a id="pause-btn-source" href="#" style="display:none">pause</a></span>
 
 			</div>
 
 			<!-- video display (when required) -->
 
-			<div id="media-content" class="media-hldr">
-				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
-				<div id="jquery_jplayer_2" class="jp-jplayer"></div>
-				<div id="fader-content"></div>
+			<div id="media-source" class="media-hldr">
+				<div id="jquery_jplayer_source" class="jp-jplayer"></div>
 			</div>
 
 			<div id="transcript-content" class="body row scroll-y">
@@ -69,6 +67,13 @@
 		<div class="right col">
 			<div class="header row">
 				<!--<span class="header-ctrl"><a href="#">play</a> | <a href="#">clear</a></span>-->
+				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#">show video</a><a id="hide-video-target" href="#" style="display:none">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
+			</div>
+
+			<div id="media-target" class="media-hldr">
+				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+				<div id="jquery_jplayer_2" class="jp-jplayer"></div>
+				<div id="fader-content"></div>
 			</div>
 
 			<div id="target-content" class="body row scroll-y" contenteditable="true">
