display videos by default

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<div id="transcript" class="middle col">
 			<div class="header row">
-				<span id="script-title"></span> <span id="load-status-source"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-source" href="#">show video</a><a id="hide-video-source" href="#" style="display:none">hide video</a> . <a id="play-btn-source" href="#">play</a><a id="pause-btn-source" href="#" style="display:none">pause</a></span>
+				<span id="script-title"></span> <span id="load-status-source"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-source" href="#" style="display:none">show video</a><a id="hide-video-source" href="#" >hide video</a> . <a id="play-btn-source" href="#" style="display:none">play</a><a id="pause-btn-source" href="#" >pause</a></span>
 
 			</div>
 
@@ -67,7 +67,7 @@
 		<div class="right col">
 			<div class="header row">
 				<!--<span class="header-ctrl"><a href="#">play</a> | <a href="#">clear</a></span>-->
-				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#">show video</a><a id="hide-video-target" href="#" style="display:none">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
+				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
 			</div>
 
 			<div id="media-target" class="media-hldr">
