player controls nearly done

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 						<a href="#" class="jp-play"></a>
 						<a href="#" class="jp-pause"></a>
 					</div>
-					<div class="fb-bar">
+					<div class="jp-bar">
 						<div class="jp-seek-bar">
 							<div class="fb-title unselectable"></div>
 							<div class="jp-duration unselectable"></div>
-							<div class="fp-play-bar"></div>
+							<div class="jp-play-bar"></div>
 						</div>
 					</div>
 				</div>
