--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<div id="transcript" class="middle col">
 			<div class="header row">
-				<span id="script-title"></span> <span id="load-status-source"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-source" href="#" style="display:none">show video</a><a id="hide-video-source" href="#" >hide video</a> . <a id="play-btn-source" href="#" style="display:none">play</a><a id="pause-btn-source" href="#" >pause</a></span>
+				<span id="script-title"></span> <span id="load-status-source"></span> <span id="source-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-source" href="#" style="display:none">show video</a><a id="hide-video-source" href="#" >hide video</a><!-- . <a id="play-btn-source" href="#" style="display:none">play</a><a id="pause-btn-source" href="#" >pause</a>--></span>
 
 			</div>
 
@@ -54,8 +54,8 @@
 				<div id="jquery_jplayer_source" class="jp-jplayer"></div>
 
 				<!-- Player controls -->
-				<div id="jp_container_1" class="jp-video jp-video-270p">
-					<div class="jp-controls unselectable">
+				<div id="jp_container_1" class="jp-video jp-video-270p" style="display:none">
+					<div id="jp-source-controls" class="jp-controls unselectable">
 						<a href="#" class="jp-play"></a>
 						<a href="#" class="jp-pause"></a>
 					</div>
