made the cssSecltorAncestor none default. As all were using same gui.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div id="jquery_jplayer_source" class="jp-jplayer"></div>
 
 				<!-- Player controls -->
-				<div id="jp_container_1" class="jp-video jp-video-270p" style="display:none">
+				<div id="jp_container_source" class="jp-video jp-video-270p" style="display:none">
 					<div id="jp-source-controls" class="jp-controls unselectable">
 						<a href="#" class="jp-play"></a>
 						<a href="#" class="jp-pause"></a>
