new transcript font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<link href="css/hap.css" rel="stylesheet" type="text/css" />
 		<link href="css/hap-player.css" rel="stylesheet" type="text/css" />
 		<link href="css/font.css" rel="stylesheet" type="text/css" />
-		<link href="font/SourceSansPro-Semibold-webfont.css" rel="stylesheet" type="text/css" />
+		<link href="font/SourceSansPro/SourceSansPro-Semibold-webfont.css" rel="stylesheet" type="text/css" />
+		<link href="font/Crimson/Crimson.css" rel="stylesheet" type="text/css" />
 		<link rel="icon" href="favicon.ico" type="image/x-icon"> 
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
 	</head>
@@ -62,6 +63,7 @@
 					<div class="jp-bar">
 						<div class="jp-seek-bar">
 							<div class="fb-title unselectable"></div>
+							<div class="jp-current-time unselectable"></div>
 							<div class="jp-duration unselectable"></div>
 							<div class="jp-play-bar"></div>
 						</div>
