start of resize functionality

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 			</div>
 		</div>
 
+		<div class="drag-bar col">
+		</div>
+
 		<!-- target content -->
 
 		<div class="right col">
@@ -107,6 +110,7 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.jplayer.js"></script>
 		<script type="text/javascript" src="js/jquery.scrollto.min.js"></script>
+		<script type="text/javascript" src="js/jquery.event.drag.js"></script>
 		<script type="text/javascript" src="js/popcorn.js"></script>
 		<script type="text/javascript" src="js/popcorn.transcript.js"></script>
 		<script type="text/javascript" src="js/iemobile-fix.js"></script>
