removed spellcheck from rhs text

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<div id="jquery_jplayer_source" class="jp-jplayer"></div>
 
 				<!-- Player controls -->
-				<div id="jp_container_source" class="jp-video jp-video-270p" style="display:none">
+				<div id="jp_container_source" class="jp-video jp-video-flex" style="display:none">
 					<div id="jp-source-controls" class="jp-controls unselectable">
 						<a href="#" class="jp-play"></a>
 						<a href="#" class="jp-pause"></a>
@@ -100,7 +100,7 @@
 				<div id="fader-content"></div>
 			</div>
 
-			<div id="target-content" class="body row scroll-y" contenteditable="true">
+			<div id="target-content" class="body row scroll-y" contenteditable="true" spellcheck="false">
 			</div>
 
 			<div class="footer row">
