seriously.js experiment (need to use local video to see locally)

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 				<div id="fader-content"></div>
 			</div>
 
+			<canvas id="target-canvas" width="480" height="270"></canvas>
+
 			<div id="target-content" class="body row scroll-y" contenteditable="true" spellcheck="false">
 			</div>
 
@@ -115,5 +117,10 @@
 		<script type="text/javascript" src="js/popcorn.transcript.js"></script>
 		<script type="text/javascript" src="js/iemobile-fix.js"></script>
 		<script type="text/javascript" src="js/hap.js"></script>
+		<script type="text/javascript" src="js/seriously/seriously.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.vignette.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.hue-saturation.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.split.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.nightvision.js"></script>
 	</body>
 </html>
