effects can be added before start of video

--- a/index.html
+++ b/index.html
@@ -118,9 +118,17 @@
 		<script type="text/javascript" src="js/iemobile-fix.js"></script>
 		<script type="text/javascript" src="js/hap.js"></script>
 		<script type="text/javascript" src="js/seriously/seriously.js"></script>
-		<script type="text/javascript" src="js/seriously/effects/seriously.vignette.js"></script>
-		<script type="text/javascript" src="js/seriously/effects/seriously.hue-saturation.js"></script>
-		<script type="text/javascript" src="js/seriously/effects/seriously.split.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.ascii.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.bleach-bypass.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.invert.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.nightvision.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.noise.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.ripple.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.scanlines.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.sepia.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.sketch.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.tvglitch.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.vignette.js"></script>
+
 	</body>
 </html>
