visual tweaks - and clear button / functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="control-hldr">
 			<div class="control">
 				<span class="logo">◨</span>The Hyperaudio Pad
-				<span style="float:right">alpha</span>
+				<!--<span class="state">alpha</span>-->
 			</div>
 		</div>
 
@@ -91,7 +91,7 @@
 		<div class="right col">
 			<div class="header row">
 				<!--<span class="header-ctrl"><a href="#">play</a> | <a href="#">clear</a></span>-->
-				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
+				<span id="clear-target" style="display:none;float:left"><a href="#">clear</a></span> <span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
 			</div>
 
 			<div id="media-target" class="media-hldr">
