save the script

--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
 		<div class="right col">
 			<div class="header row">
 				<!--<span class="header-ctrl"><a href="#">play</a> | <a href="#">clear</a></span>-->
-				<span id="clear-target" style="display:none;float:left"><a href="#">clear</a></span> <span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
+				<span id="target-action-ctrl" style="display:none">
+					<a id="clear-target" href="#">clear</a> . 
+					<a id="save-target" href="#">save</a><!--<a id="copy-url" href="#" style="display:none">copy</a>-->
+						<!--<input id="save-url" type="text" value="" style="display:none">-->
+				</span>
+
+				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
 			</div>
 
 			<div id="media-target" class="media-hldr">
