Added colorcube effect. Thought it would be less crap.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 		<script type="text/javascript" src="js/seriously/seriously.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.ascii.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.bleach-bypass.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.colorcube.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.invert.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.nightvision.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.noise.js"></script>
