--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 		<script type="text/javascript" src="js/seriously/effects/seriously.bleach-bypass.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.colorcube.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.emboss.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.fader.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.invert.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.nightvision.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.noise.js"></script>
