--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
 			</div>
 
-			<div id="media-target" class="media-hldr">
+			<div id="media-target" class="media-hldr" style="display:none">
 				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
 				<div id="jquery_jplayer_2" class="jp-jplayer"></div>
 				<div id="fader-content"></div>
