--- a/index.html
+++ b/index.html
@@ -73,17 +73,8 @@
 			</div>
 
 			<div id="transcript-content" class="body row scroll-y">
-				<div id="temp-note">
-				<strong>Temporary Note</strong>
-				<p>Please note that this application currently <strong>works best in Firefox</strong>. In Chrome it works as long as you have the developer console open.</p>
-				<p>We are using very new technology and even though we are adhering to standards, inevitably behaviour varies between browsers. (Especially when it comes to media).</p>
-				
-				<p>We haven't tested other browsers yet, but we do aim to make this application truly cross-browser by the time we reach beta.</p>
-
-				<p>Any browser bugs discovered will be filed.</p>
-
-				<p>Select a transcript to begin.</p>
-				</div>
+				<!--<div id="temp-note">
+				</div>-->
 			</div>
 
 			<div class="footer row">
