added works best in Firefox/Chrome warning text

--- a/index.html
+++ b/index.html
@@ -73,8 +73,17 @@
 			</div>
 
 			<div id="transcript-content" class="body row scroll-y">
-				<!--<div id="temp-note">
-				</div>-->
+				<div id="temp-note">
+					<strong>Temporary Note</strong>
+					<p>Please note that this application currently <strong>works best in Firefox and Chrome</strong>.</p>
+					<p>We are using very new technology and even though we are adhering to standards, inevitably behaviour varies between browsers. (Especially when it comes to media).</p>
+					
+					<p>We haven't tested other browsers yet, but we do aim to make this application truly cross-browser by the time we reach beta.</p>
+
+					<p>Any browser bugs discovered will be filed.</p>
+
+					<p>Select a transcript to begin.</p>
+				</div>
 			</div>
 
 			<div class="footer row">
