Added fullscreen button

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<!--<input id="save-url" type="text" value="" style="display:none">-->
 				</span>
 
-				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
+				<span id="load-status-target"></span> <span id="target-header-ctrl" class="header-ctrl" style="display:none"><a id="full-screen-target" href="#">fullscreen</a> . <a id="show-video-target" href="#" style="display:none">show video</a><a id="hide-video-target" href="#">hide video</a> . <a id="play-btn-target" href="#">play</a><a id="pause-btn-target" href="#" style="display:none">pause</a></span>
 			</div>
 
 			<div id="media-target" class="media-hldr" style="display:none">
