--- a/index.html
+++ b/index.html
@@ -54,20 +54,24 @@
 			<!-- video display (when required) -->
 
 			<div id="media-source" class="media-hldr">
-				<div id="jquery_jplayer_source" class="jp-jplayer"></div>
 
 				<!-- Player controls -->
 				<div id="jp_container_source" class="jp-video jp-video-flex" style="display:none">
-					<div id="jp-source-controls" class="jp-controls unselectable">
-						<a href="#" class="jp-play"></a>
-						<a href="#" class="jp-pause"></a>
-					</div>
-					<div class="jp-bar">
-						<div class="jp-seek-bar">
-							<div class="fb-title unselectable"></div>
-							<div class="jp-current-time unselectable"></div>
-							<div class="jp-duration unselectable"></div>
-							<div class="jp-play-bar"></div>
+
+					<div id="jquery_jplayer_source" class="jp-jplayer"></div>
+
+					<div class="jp-gui">
+						<div class="jp-controls unselectable">
+							<a class="jp-play"></a>
+							<a class="jp-pause"></a>
+						</div>
+						<div class="jp-bar">
+							<div class="jp-seek-bar">
+								<div class="jp-play-bar"></div>
+								<div class="jp-current-time unselectable"></div>
+								<div class="jp-duration unselectable"></div>
+								<div class="fb-title unselectable"></div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -120,20 +124,24 @@
 
 			<div class="media-hldr">
 
-				<canvas id="target-canvas" width="480" height="270"></canvas>
-
 				<!-- Player controls -->
 				<div id="jp_container_target" class="jp-video jp-video-flex">
-					<div id="jp-source-controls" class="jp-controls unselectable">
-						<a href="#" class="jp-play"></a>
-						<a href="#" class="jp-pause"></a>
-					</div>
-					<div class="jp-bar">
-						<div class="jp-seek-bar">
-							<div class="fb-title unselectable"></div>
-							<div class="jp-current-time unselectable"></div>
-							<div class="jp-duration unselectable"></div>
-							<div class="jp-play-bar"></div>
+
+					<canvas id="target-canvas"></canvas>
+
+					<div class="jp-gui">
+						<div class="jp-controls unselectable">
+							<a href="#" class="jp-play"></a>
+							<a href="#" class="jp-pause"></a>
+							<a href="#" class="jp-viewsource"></a>
+						</div>
+						<div class="jp-bar">
+							<div class="jp-seek-bar">
+								<div class="jp-play-bar"></div>
+								<div class="jp-current-time unselectable"></div>
+								<div class="jp-duration unselectable"></div>
+								<div class="fb-title unselectable"></div>
+							</div>
 						</div>
 					</div>
 				</div>
