Refactored skin and improved full screen.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 	</head>
 	<body>
 
-		<a href="#" class="jp-viewsource"></a>
-
-
 		<div id="control-hldr">
 			<div class="control">
 				<span class="logo">◨</span>The Hyperaudio Pad
@@ -133,7 +130,6 @@
 						<div class="jp-controls unselectable">
 							<a href="#" class="jp-play"></a>
 							<a href="#" class="jp-pause"></a>
-							<a href="#" class="jp-viewsource"></a>
 						</div>
 						<div class="jp-bar">
 							<div class="jp-seek-bar">
@@ -142,6 +138,9 @@
 								<div class="jp-duration unselectable"></div>
 								<div class="fb-title unselectable"></div>
 							</div>
+						</div>
+						<div class="jp-controls-2 unselectable">
+							<a href="#" class="jp-viewsource"></a>
 						</div>
 					</div>
 				</div>
