Removed the href=# from the gui controls.

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
 					<div class="jp-gui">
 						<div class="jp-controls unselectable">
-							<a href="#" class="jp-play"></a>
-							<a href="#" class="jp-pause"></a>
+							<a class="jp-play"></a>
+							<a class="jp-pause"></a>
 						</div>
 						<div class="jp-bar">
 							<div class="jp-seek-bar">
@@ -140,7 +140,7 @@
 							</div>
 						</div>
 						<div class="jp-controls-2 unselectable">
-							<a href="#" class="jp-viewsource"></a>
+							<a class="jp-viewsource"></a>
 						</div>
 					</div>
 				</div>
