Cleaned out the old fader-content elem and js.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div id="media-target" class="media-hldr" style="display:none">
 				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
 				<div id="jquery_jplayer_2" class="jp-jplayer"></div>
-				<div id="fader-content"></div>
+				<canvas id="caption-canvas"></canvas>
 			</div>
 
 			<div class="media-hldr">
