Added caption method to target player. On all time.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div id="media-target" class="media-hldr" style="display:none">
 				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
 				<div id="jquery_jplayer_2" class="jp-jplayer"></div>
-				<canvas id="caption-canvas"></canvas>
+				<canvas id="caption-canvas" width="480" height="270"></canvas>
 			</div>
 
 			<div class="media-hldr">
@@ -124,7 +124,7 @@
 				<!-- Player controls -->
 				<div id="jp_container_target" class="jp-video jp-video-flex">
 
-					<canvas id="target-canvas"></canvas>
+					<canvas id="target-canvas" width="480" height="270"></canvas>
 
 					<div class="jp-gui">
 						<div class="jp-controls unselectable">
@@ -165,6 +165,7 @@
 		<script type="text/javascript" src="js/seriously/seriously.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.ascii.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.bleach-bypass.js"></script>
+		<script type="text/javascript" src="js/seriously/effects/seriously.blend.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.colorcube.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.emboss.js"></script>
 		<script type="text/javascript" src="js/seriously/effects/seriously.fader.js"></script>
