started more of the audio stuff

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	</head>
 	<body>
 
+		<div id="jquery_jplayer_audio" class="jp-audio"></div>
+
 		<div id="control-hldr">
 			<div class="control">
 				<span class="logo">◨</span>The Hyperaudio Pad
